fixes images overlapping headers

--- a/Public_static/css/index.css
+++ b/Public_static/css/index.css
@@ -186,4 +186,8 @@ header
     justify-content: flex-end;
 }
 
+.description {
+    font-size: 16px;
+}
+
 
